--- a/app/src/main/res/layout/fragment_locations_item.xml
+++ b/app/src/main/res/layout/fragment_locations_item.xml
@@ -22,12 +22,10 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/genericIV"
+            <org.osmdroid.views.MapView
+                android:id="@+id/LocationItemMAP"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/baseline_my_location_24" />
+                android:layout_height="100dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
