--- a/app/src/main/res/layout/fragment_location_detail.xml
+++ b/app/src/main/res/layout/fragment_location_detail.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/locDetailMAP">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/locationDetailRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp"
