Design und letzte Änderungen

--- a/app/src/main/res/layout/fragment_export2_mail.xml
+++ b/app/src/main/res/layout/fragment_export2_mail.xml
@@ -23,13 +23,12 @@
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/exportDataTV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="exportFragment"
         android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/sendItFAB"
